# wcl

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: publish.yml
test/: test_data_manger.py  test_types_manager.py
test/simulation/: get_statistics.py
test/statistics/: get_global_stats.py
winston/: blast_hit.py  blaster.py  contaminations_finder.py  coverage_detector.py  data_manager.py  mapper.py  name_converter.py  path_resolver.py  seq_id.py  settings.py  types_manager.py
winston/blastab/: one_vs_all.py  one_vs_one.py
